# quantrl

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  pylintrc  pyproject.toml  requirements.txt  requirements_tox.txt  setup.py
.github/workflows/: python-tox.yml
docs/source/: conf.py  index.rst  quantrl.backends.rst  quantrl.envs.rst  quantrl.io.rst  quantrl.plotters.rst  quantrl.solvers.rst  quantrl.utils.rst
quantrl/: __init__.py  io.py  log.py  plotters.py  utils.py
quantrl/backends/: base.py  context_manager.py  jax.py  numpy.py  torch.py
quantrl/envs/: BaseEnv.py  __init__.py  base.py  deterministic.py  rl.py  stochastic.py
quantrl/solvers/: QCMSolver.py  __init__.py  base.py  context_manager.py  differential.py  jax.py  measure.py  numpy.py  torch.py
